# TraktIMDbSync

./: .gitignore  README.md  pyproject.toml
IMDBTraktSyncer/: IMDBTraktSyncer.py  QUICKSTART.md  arguments.py  authTrakt.py  checkChrome.py  checkVersion.py  errorHandling.py  imdbData.py  syncCheckpoint.py  traktData.py  verifyCredentials.py
TraktIMDbSync/: __init__.py
