[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TraktIMDbSync"
version = "3.6.8"
description = "TraktIMDbSync is a Python tool that syncs Trakt and IMDb watchlists, ratings, reviews, and watch history in both directions."
authors = [
    {name = "RileyXX"}
]
maintainers = [
    {name = "AliAlboushama"}
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.6"

dependencies = [
  "requests>=2.32.3",
  "selenium>=4.15.2"
]

[project.urls]
homepage = "https://github.com/AliAlboushama/TraktIMDbSync"
issues = "https://github.com/AliAlboushama/TraktIMDbSync/issues"
changelog = "https://github.com/AliAlboushama/TraktIMDbSync/releases"
repository = "https://github.com/AliAlboushama/TraktIMDbSync"
documentation = "https://github.com/AliAlboushama/TraktIMDbSync"

[project.scripts]
TraktIMDbSync = "TraktIMDbSync:main"
IMDBTraktSyncer = "TraktIMDbSync:main"

[tool.setuptools]
packages = ["IMDBTraktSyncer", "TraktIMDbSync"]
